lesson_5/k8s/otus-lesson-5-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lesson-5-service # The resource name
  namespace: otus
spec:
  type: NodePort # Provides the Service on the internal IP of the cluster
  selector:
    app: lesson-5
  ports:
    - protocol:   TCP
      port:       8000 # Service port
      targetPort: web  # Application port inside pod labeled 'lesson-5'
