lesson_5/k8s/otus-lesson-5-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: lesson-5-gateway
  namespace: otus
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8000
        name: http
        protocol: HTTP
      hosts:
        - "*"
