lesson_5/k8s/otus-lesson-5-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: lesson-5-destination-rule
  namespace: otus
spec:
  host: lesson-5-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
